--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.61.5",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "viem": "^2.21.51",
+    "wagmi": "^2.13.2",
+    "webpack": "^5.96.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "^20.17.9",
+    "@types/react": "^18.3.12",
     "@types/react-dom": "^18",
     "eslint": "^9.15.0",
     "eslint-config-next": "15.0.3",
-    "typescript": "^5"
+    "ignore-loader": "^0.1.2",
+    "null-loader": "^4.0.1",
+    "typescript": "^5.7.2"
   }
 }
