--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build", 
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/modal": "^2.3.1",
     "@chakra-ui/react": "^3.2.1",
     "@emotion/react": "^11.13.5",
     "@tanstack/react-query": "^5.61.4",
@@ -17,8 +18,9 @@
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-icons": "^5.3.0",
+    "recoil": "^0.7.7",
     "viem": "^2.21.51",
-    "wagmi": "^2.13.0"
+    "wagmi": "v2.12.33"
   },
   "devDependencies": {
     "@types/node": "^20",
