--- a/package.json
+++ b/package.json
@@ -12,22 +12,35 @@
     "@chakra-ui/modal": "^2.3.1",
     "@chakra-ui/react": "^3.2.1",
     "@emotion/react": "^11.13.5",
-    "@tanstack/react-query": "^5.61.4",
-    "next": "15.0.3",
+    "@tanstack/react-query": "5.45.1",
+    "install": "^0.13.0",
+    "jotai": "^2.10.3",
+    "next": "14.2.4",
     "next-themes": "^0.4.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "recoil": "^0.7.7",
     "viem": "^2.21.51",
-    "wagmi": "v2.12.33"
+    "wagmi": "^2.13.2"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^20.12.10",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.16.0",
+    "@typescript-eslint/parser": "^8.16.0",
+    "@wagmi/cli": "latest",
+    "bufferutil": "^4.0.8",
+    "encoding": "^0.1.13",
     "eslint": "^9.15.0",
-    "eslint-config-next": "15.0.3",
-    "typescript": "^5"
+    "eslint-config-next": "^15.0.3",
+    "lokijs": "^1.5.12",
+    "pino-pretty": "^10.3.1",
+    "supports-color": "^9.4.0",
+    "typescript": "^5.4.5",
+    "utf-8-validate": "^5.0.2"
+  },
+  "overrides": {
+    "@metamask/sdk": "0.30.0"
   }
 }
