--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
   "extends": [
     "next/core-web-vitals",
-    "next/typescript"
+    "typescript"
   ],
   "rules": {
     "@typescript-eslint/no-empty-interface": "off",
