--- a/package.json
+++ b/package.json
@@ -9,19 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/modal": "^2.3.1",
     "@chakra-ui/react": "^3.2.1",
     "@emotion/react": "^11.13.5",
     "@tanstack/react-query": "5.45.1",
     "install": "^0.13.0",
     "jotai": "^2.10.3",
-    "next": "14.2.4",
+    "next": "^14.2.18",
     "next-themes": "^0.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "viem": "^2.21.51",
-    "wagmi": "^2.13.2"
+    "wagmi": "v2.12.33"
   },
   "devDependencies": {
     "@types/node": "^20.12.10",
@@ -32,15 +31,10 @@
     "@wagmi/cli": "latest",
     "bufferutil": "^4.0.8",
     "encoding": "^0.1.13",
-    "eslint": "^9.15.0",
-    "eslint-config-next": "^15.0.3",
     "lokijs": "^1.5.12",
     "pino-pretty": "^10.3.1",
     "supports-color": "^9.4.0",
     "typescript": "^5.4.5",
     "utf-8-validate": "^5.0.2"
-  },
-  "overrides": {
-    "@metamask/sdk": "0.30.0"
   }
 }
