feat: add network switcher

--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "@wagmi/cli": "latest",
     "bufferutil": "^4.0.8",
     "encoding": "^0.1.13",
+    "eslint": "^8.41.0",
+    "eslint-config-next": "14.2.18",
+    "eslint-config-typescript": "^3.0.0",
     "lokijs": "^1.5.12",
     "pino-pretty": "^10.3.1",
     "supports-color": "^9.4.0",
