--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^3.2.1",
     "@emotion/react": "^11.13.5",
     "@tanstack/react-query": "5.45.1",
+    "ethers": "^6.13.4",
     "install": "^0.13.0",
     "jotai": "^2.10.3",
     "next": "^14.2.18",
