--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@chakra-ui/react": "^3.2.1",
     "@emotion/react": "^11.13.5",
     "@tanstack/react-query": "5.45.1",
+    "@tokamak-network/thanos-contracts": "^0.0.5",
+    "@tokamak-network/thanos-sdk": "^0.0.11",
+    "@wagmi/core": "^2.15.0",
     "ethers": "^6.13.4",
     "install": "^0.13.0",
     "jotai": "^2.10.3",
