--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@chakra-ui/react": "^3.2.1",
     "@emotion/react": "^11.13.5",
     "@tanstack/react-query": "5.45.1",
-    "@wagmi/core": "^2.15.0",
-    "ethers": "^6.13.4",
+    "@tokamak-network/thanos-sdk": "^0.0.11",
+    "ethers": "^5.7.2",
     "install": "^0.13.0",
     "jotai": "^2.10.3",
     "next": "^14.2.18",
@@ -22,7 +22,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "viem": "^2.21.51",
-    "wagmi": "v2.12.33"
+    "wagmi": "^2.13.3"
   },
   "devDependencies": {
     "@types/node": "^20.12.10",
