--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@chakra-ui/react": "^3.2.1",
     "@emotion/react": "^11.13.5",
     "@tanstack/react-query": "5.45.1",
-    "@tokamak-network/thanos-sdk": "^0.0.13",
+    "@tokamak-network/thanos-sdk": "^0.0.14",
     "ethers": "^5.7.2",
     "install": "^0.13.0",
     "jotai": "^2.10.3",
@@ -21,6 +21,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "sharp": "^0.33.5",
     "viem": "^2.21.51",
     "wagmi": "^2.13.3"
   },
