--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-toastify": "^10.0.6",
     "sharp": "^0.33.5",
     "viem": "^2.21.51",
     "wagmi": "^2.13.3"
