--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "install": "^0.13.0",
     "jotai": "^2.10.3",
     "next": "^14.2.18",
+    "next-runtime-env": "^3.2.2",
     "next-themes": "^0.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
