feat: add batching period

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 NEXT_PUBLIC_L1_CHAIN_NAME=Sepolia
 NEXT_PUBLIC_L1_CHAIN_ID=11155111
-NEXT_PUBLIC_L1_RPC=https://sepolia.infura.io/v3/e4b3b2781dd34bc4817a1221b8a3b50a
+NEXT_PUBLIC_L1_RPC=
 NEXT_PUBLIC_L1_NATIVE_CURRENCY_NAME=Sepolia Ether
 NEXT_PUBLIC_L1_NATIVE_CURRENCY_SYMBOL=ETH
 NEXT_PUBLIC_L1_NATIVE_CURRENCY_DECIMALS=18
