feat: add chain config params

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,9 @@ NEXT_PUBLIC_OPTIMISM_PORTAL_ADDRESS=0x2fbD30Fcd1c4573b0288E706Be56B5c0d2DfcAF6
 NEXT_PUBLIC_L2_OUTPUT_ORACLE_ADDRESS=0xC0885eEc313e31a917DFd5d6Bf33565826B93A3F
 NEXT_PUBLIC_L1_USDC_BRIDGE_ADDRESS=0x7dD2196722FBe83197820BF30e1c152e4FBa0a6A
 NEXT_PUBLIC_DISPUTE_GAME_FACTORY_ADDRESS=0x524c885A976c13497900A04257605cd231Ab0026
+
+NEXT_PUBLIC_L2_BLOCK_BATCHING_PERIOD=18000
+NEXT_PUBLIC_L1_BLOCK_TIME=12
+NEXT_PUBLIC_L2_BLOCK_TIME=6
+NEXT_PUBLIC_L2_STATE_ROOT_PROPOSAL_PERIOD=240
+NEXT_PUBLIC_CHALLENGE_PERIOD=12
