--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --webpack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -16,11 +16,11 @@
     "ethers": "^5.7.2",
     "install": "^0.13.0",
     "jotai": "^2.10.3",
-    "next": "^14.2.18",
+    "next": "^16.0.8",
     "next-runtime-env": "^3.2.2",
     "next-themes": "^0.4.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-icons": "^5.3.0",
     "react-toastify": "^10.0.6",
     "sharp": "^0.33.5",
@@ -37,7 +37,7 @@
     "bufferutil": "^4.0.8",
     "encoding": "^0.1.13",
     "eslint": "^8.41.0",
-    "eslint-config-next": "14.2.18",
+    "eslint-config-next": "^16.0.8",
     "eslint-config-typescript": "^3.0.0",
     "lokijs": "^1.5.12",
     "pino-pretty": "^10.3.1",
