--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --webpack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -16,7 +16,7 @@
     "ethers": "^5.7.2",
     "install": "^0.13.0",
     "jotai": "^2.10.3",
-    "next": "^16.0.8",
+    "next": "15.4.8",
     "next-runtime-env": "^3.2.2",
     "next-themes": "^0.4.3",
     "react": "^19.2.1",
@@ -37,7 +37,7 @@
     "bufferutil": "^4.0.8",
     "encoding": "^0.1.13",
     "eslint": "^8.41.0",
-    "eslint-config-next": "^16.0.8",
+    "eslint-config-next": "15.0.3",
     "eslint-config-typescript": "^3.0.0",
     "lokijs": "^1.5.12",
     "pino-pretty": "^10.3.1",
